[add] refresh token and auto logout upon expired refresh token

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -17,7 +17,8 @@
         "password": "password",
         "invalidPassword": "Please enter a password",
         "invalidEmail": "Invalid email",
-        "invalidLogin": "Invalid email and password"
+        "invalidLogin": "Invalid email and password",
+        "InactiveLogoutMessage": "You've been logged out due to inactivity"
     },
     "game": {
         "detail": {},
