[add] translations game detail page

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -21,7 +21,11 @@
         "InactiveLogoutMessage": "You've been logged out due to inactivity"
     },
     "game": {
-        "detail": {},
+        "detail": {
+            "description": "Description",
+            "title": "Title",
+            "saveSucces": "Save success"
+        },
         "addModal": {
             "game": "game",
             "info": "Select a game to add to your list",
