--- a/src/assets/i18n/nl.json
+++ b/src/assets/i18n/nl.json
@@ -54,5 +54,14 @@
         "invalidEmail": "Ongeldige email",
         "invalidForm": "Niet alle benodigde velden zijn ingevuld of juist",
         "alreadyExistingEmail": "Het ingevulde email bestaat al"
+    },
+    "review": {
+        "by": "Door",
+        "postedDate": "Geplaatst op",
+        "description": "Mening",
+        "recentlyUpdatedDate": "Laatst geupdate op",
+        "deleteConfirmMessage": "Weet je zeker dat je deze review wilt verwijderen",
+        "delete": "Verwijder",
+        "cancel": "Annuleren"
     }
 }
