[add] language for deleting review and more

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -33,6 +33,7 @@
             "addGame": "Add game to library"
         },
         "addNewGameModal": {
+            "info": "Please insert the information for the game that you want to add to the server",
             "description": "Description",
             "name": "Name",
             "AddToServer": "Add game to server"
