--- a/src/assets/i18n/nl.json
+++ b/src/assets/i18n/nl.json
@@ -68,5 +68,9 @@
         "recentlyUpdatedDate": "Laatst geupdate op",
         "deleteWarning": "Weet je zeker dat je deze review wilt verwijderen",
         "delete": "Verwijder"
+    },
+    "userRole": {
+        "user": "Gebruiker",
+        "role": "Rol"
     }
 }
